Lägg till lösenordsgenerator

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             target="_blank">
             Wishlist
           </a>
+          <a
+            href="https://password-generator.findersson.se/"
+            class="card external"
+            target="_blank">
+            Lösenordsgenerator
+          </a>
         </nav>
       </div>
     </header>
